[package]
name = "semantic-version-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
colored = "2.0.4"
derive_builder = "0.12.0"
nom = "7.1.3"
regex = "1.9.5"
